--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,33 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      MapsTest
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <ion-fab
+    vertical="top"
+    horizontal="end"
+    slot="fixed"
+    (click)="changePosition()"
+  >
+    <ion-fab-button>
+      <ion-icon name="locate"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <div id="map" style="height:100%;">
+    <ion-fab
+      *ngIf="pinLocation"
+      vertical="bottom"
+      horizontal="center"
+      slot="fixed"
+      (click)="openPosition()"
+    >
+      <ion-fab-button>
+        <ion-icon name="pin"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
   </div>
 </ion-content>
